Create build files to AddVect lib

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,4 +4,10 @@ project(GPU_TASKS LANGUAGES CXX CUDA)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
 
-add_executable(src1 src/src1.cu)
+add_library(gpu_tasks STATIC
+    src/src1.cu
+)
+
+target_include_directories(gpu_tasks PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/includes
+)
