--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(gpu_tasks LANGUAGES CXX CUDA)
+
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
@@ -15,6 +15,7 @@ set(CUDA_ARCH ${arch})
 
 target_include_directories(gpu_tasks PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/includes"
+    "${PROJECT_SOURCE_DIR}/utils/includes"
 )
 
 set_target_properties(gpu_tasks PROPERTIES CUDA_ARCHITECTURES "75")
