--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library(cuda_timer STATIC ${SRC})
 add_library(work1::cuda_timer ALIAS cuda_timer)
 
 target_include_directories(cuda_timer PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/include/
+    ${CMAKE_CURRENT_SOURCE_DIR}/includes/
 )
 
 target_compile_features(cuda_timer PRIVATE
