--- a/lab2/core/CMakeLists.txt
+++ b/lab2/core/CMakeLists.txt
@@ -1,23 +1,21 @@
 cmake_minimum_required(VERSION 3.18)
-project(matrix_tests LANGUAGES CUDA)
 
-
-add_executable(123test 123test.cu)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CUDA_STANDARD 17)
 
 set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_INCLUDES OFF)
 set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_LIBRARIES OFF) 
 set(CMAKE_CUDA_USE_RESPONSE_FILE_FOR_OBJECTS OFF)
 
+find_package(CUDAToolkit REQUIRED)
+
 add_library(matrix_core INTERFACE)
 add_library(matrix::core ALIAS matrix_core)
 
-set_target_properties(123test PROPERTIES CUDA_ARCHITECTURES "75")
+set_target_properties(matrix_core PROPERTIES CUDA_ARCHITECTURES "75")
 
-target_include_directories(123test PRIVATE includes)
-
-target_link_libraries(123test PRIVATE 
-    cudart
-    cudadevrt
+target_compile_options(matrix_core INTERFACE 
+    --expt-relaxed-constexpr
 )
 
-set(CMAKE_CUDA_STANDARD 17)
+target_include_directories(matrix_core INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/includes")
