tests and benches added

--- a/lab2/bench/CMakeLists.txt
+++ b/lab2/bench/CMakeLists.txt
@@ -16,6 +16,11 @@ FetchContent_Declare(
     )
 FetchContent_MakeAvailable(Eigen)
 
+
 add_executable(bench src/main.cu)
+
+set_target_properties(bench PROPERTIES
+    CUDA_ARCHITECTURES "75"
+)
 
 target_link_libraries(bench PRIVATE matrix_core benchmark Eigen3::Eigen)
