--- a/lab2/tests/CMakeLists.txt
+++ b/lab2/tests/CMakeLists.txt
@@ -21,6 +21,8 @@ set_target_properties(test_matrix PROPERTIES
 
 enable_testing()
 
-find_package(Eigen3 REQUIRED)
+target_include_directories(test_matrix PRIVATE
+    ${eigen_SOURCE_DIR}
+)
 
 target_link_libraries(test_matrix PRIVATE matrix_core gtest_main ${EIGEN3_INCLUDE_DIR})
