--- a/lab3/tests/CMakeLists.txt
+++ b/lab3/tests/CMakeLists.txt
@@ -21,6 +21,8 @@ set_target_properties(test_shared_matrix PROPERTIES
 
 enable_testing()
 
-find_package(Eigen3 REQUIRED)
+target_include_directories(test_shared_matrix PRIVATE
+    ${eigen_SOURCE_DIR}
+)
 
-target_link_libraries(test_shared_matrix PRIVATE gtest_main ${EIGEN3_INCLUDE_DIR})
+target_link_libraries(test_shared_matrix PRIVATE matrix_core gtest_main)
