--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -3,3 +3,5 @@ project(lab3 LANGUAGES CXX CUDA)
 
 add_subdirectory(core)
 add_subdirectory(tests)
+add_subdirectory(bench)
+add_subdirectory(utils)
