--- a/lab5/CMakeLists.txt
+++ b/lab5/CMakeLists.txt
@@ -5,3 +5,5 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_subdirectory(core)
 add_subdirectory(tests)
+add_subdirectory(bench)
+add_subdirectory(utils)
